--- a/TopSecretRecipes/css/breakfast.css
+++ b/TopSecretRecipes/css/breakfast.css
@@ -70,7 +70,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: black;
+    background-color: lightslategrey;
     width: 100%;
     height: 100%;
     margin-top: 5%;
@@ -113,9 +113,9 @@ body {
     height: 100%;
     position: fixed;
     background: radial-gradient(
-        circle 8rem at var(--cursorXPos) var(--cursorYPos),
-        rgba(0,0,0,0)0%,
-        rgba(0,0,0,1.00)150%
+        circle 15rem at var(--cursorXPos) var(--cursorYPos),
+        rgba(0,0,0,0.80)20%,
+        rgba(0,0,0,0.80)300%
     );
 z-index: 11;
 }
