--- a/TopSecretRecipes/css/homepage.css
+++ b/TopSecretRecipes/css/homepage.css
@@ -43,7 +43,7 @@ h1 a {
 }
 
 body{
-    background-color: black;
+    background-color: lightgrey;
     width: 100%;
     height: 100%;
     margin-top: 5%;
