--- a/TopSecretRecipes/css/contactInfo.css
+++ b/TopSecretRecipes/css/contactInfo.css
@@ -8,7 +8,7 @@
     border-style: dotted;
 }
 body{
-    background-color: black;
+    background-color: lightslategray;
     width: 100%;
     height: 100%;
     margin-top: 5%;
