--- a/TopSecretRecipes/css/contactInfo.css
+++ b/TopSecretRecipes/css/contactInfo.css
@@ -65,13 +65,21 @@ p {
     font-size: xx-large;
     color: gold;
 }
-footer p{
+footer ul{
     display: flex;
     justify-content: center;
     align-content: center;
     margin-bottom: 2%;
 }
+footer li {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: gold;
+}
 footer a {
     text-decoration: none;
     color: gold;
+    margin-bottom: 2%;
 }
